--- a/Front/home/home.html
+++ b/Front/home/home.html
@@ -24,7 +24,7 @@
         <!-- 상단 헤더 -->
         <header class="header">
             <div class="header-left">
-                <img src="../../aseet/images/logo.png" class="logo" alt="logo">
+                <img src="../login/logo.png" class="logo" alt="logo">
             </div>
 
             <div class="header-right">
