--- a/Front/login/login.html
+++ b/Front/login/login.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <img src="../../../aseet/images/logo.png" class="logo">
+        <img src="logo.png" class="logo">
 
         <label>학교메일</label>
         <input type="email" id="email" value="20242013@edu.hanbat.ac.kr">
