--- a/Front/createfind/createfind.html
+++ b/Front/createfind/createfind.html
@@ -52,9 +52,8 @@
                 <textarea id="description" placeholder="게시글 내용을 작성해주세요" rows="6" maxlength="500"></textarea>
 
                 <div class="description-hint">
-                    찾았어요! 게시판 작성 시 500자 제한<br>
-                    개인정보 포함 시 모자이크 필요<br>
-                    주인 확인은 쪽지로 진행해주세요.
+                    찾았어요! 게시판에 올릴 게시글 내용을 200자 내로 작성해 주세요.<br><br>
+                    물건 주인의 개인정보가 포함 된 사진은 모자이크가 필요해요. <br> 물건 주인임을 확인할 수 있는 내용은 쪽지로 이야기해요.
                 </div>
 
             <span class="char-count"><span id="descriptionCount">0</span>/500</span>
