--- a/Front/signup/signup.html
+++ b/Front/signup/signup.html
@@ -50,13 +50,23 @@
 
         <div class="form-group">
           <label for="password">비밀번호</label>
+          <div class="password-wrapper">
           <input type="password" id="password" placeholder="비밀번호를 입력하세요" required>
+            <button type="button" class="password-toggle" id="passwordToggle">
+              <i class="material-icons">visibility</i>
+            </button>
+          </div>
           <span class="error-message" id="passwordError"></span>
         </div>
 
         <div class="form-group">
           <label for="passwordConfirm">비밀번호 확인</label>
+          <div class="password-wrapper">
           <input type="password" id="passwordConfirm" placeholder="비밀번호를 다시 입력하세요" required>
+            <button type="button" class="password-toggle" id="passwordConfirmToggle">
+              <i class="material-icons">visibility</i>
+            </button>
+          </div>
           <span class="error-message" id="passwordConfirmError"></span>
         </div>
 
@@ -129,6 +139,15 @@
         <button class="complete-btn" id="completeBtn" disabled>가입 완료</button>
       </div>
     </section>
+  </div>
+
+  <!-- 성공 팝업 -->
+  <div class="success-popup" id="successPopup">
+    <div class="popup-content">
+      <div class="popup-icon">✓</div>
+      <div class="popup-message" id="popupMessage"></div>
+      <button class="popup-close-btn" id="popupCloseBtn">확인</button>
+    </div>
   </div>
 
   <script src="signup.js"></script>
