fix: 공지사항 알림배지 fix: 인증번호 확인 버튼 위치 수정

--- a/Front/signup/signup.html
+++ b/Front/signup/signup.html
@@ -39,9 +39,9 @@
           <span class="error-message" id="emailError"></span>
           
           <div id="verificationSection" style="display: none; margin-top: 12px;">
-            <div style="display: flex; gap: 8px; align-items: flex-start;">
-              <input type="text" id="verificationCode" placeholder="인증번호를 입력하세요" style="flex: 1;">
-              <button class="check-email-btn" id="verifyCodeBtn" type="button">인증 확인</button>
+            <div class="verification-wrapper">
+              <input type="text" id="verificationCode" placeholder="인증번호를 입력하세요">
+              <button class="verify-code-btn" id="verifyCodeBtn" type="button">인증 확인</button>
             </div>
             <span class="error-message" id="verificationError"></span>
             <div id="verificationStatus" style="margin-top: 4px; font-size: 12px;"></div>
